# python-lightningcss

./: Cargo.toml  README.md  lightningcss.pyi  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs  visitor.rs
tests/: test_bundle_css.py  test_process_stylesheet.py
tests/data/: invalid.css  main.css
