[package]
name = "python-lightningcss"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lightningcss"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"] }
browserslist-rs = "0.17.0"
lightningcss = { version = "1.0.0-alpha.65", features = ["browserslist"] }
