[package]
name = "python-lightningcss"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lightningcss"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"] }
browserslist-rs = "0.19.0"
lightningcss = { version = "1.0.0-alpha.71", features = ["browserslist"] }
